--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "eslint": "8.32.0",
     "eslint-config-next": "13.1.5",
     "lucide-react": "^0.108.0",
-    "next": "13.1.5",
+    "next": "^13.5.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.7.1",
